didi.css
/* ... */
@media only screen and (min-width:601px) and (max-width:992px){
   .font-size-base{font-size: 16px}

  .grid.m1>*,.grid.m1.space>*,.grid.m2>.span,.grid.m2.space>.span{width:100%;margin-right:0;display: inline-block}
  .grid.m2>*{width:50%}
  .grid.m2.space>*{width:49%}
  .grid.m2.space>:nth-child(2n){margin-right:0}
  .grid.m3>*{width:33.3333%}
  .grid.m3.space>*{width:32%}
  .grid.m3.space>:nth-child(3n+3){margin-right:0}
  .grid.m4>*{width:25%}
  .grid.m4.space>*{width:23.5%}
  .grid.m4.space>:nth-child(4n+4){margin-right:0}
  .grid.m5>*{width:20%}
  .grid.m5.space>*{width:18.4%}
  .grid.m5.space>:nth-child(5n+5){margin-right:0}
  .grid.m6>*{width:16.6666%}
  .grid.m6.space>*{width:15%}
  .grid.m6.space>:nth-child(6n+6){margin-right:0}
  .grid.m7>*{width:14.2857%}
  .grid.m7.space>*{width:12.5715%}
  .grid.m7.space>:nth-child(7n+7){margin-right:0}
  .grid.m8>*{width:12.5%}
  .grid.m8.space>*{width:10.75%}
  .grid.m8.space>:nth-child(8n+8){margin-right:0}
  .grid.m9>*{width:11.1111%}
  .grid.m9.space>*{width:9.3333%}
  .grid.m9.space>:nth-child(9n+10){margin-right:0}
  .grid.m10>*{width:10%}
  .grid.m10.space>*{width:8.2%}
  .grid.m10.space>:nth-child(10n+10){margin-right:0}

  .col.m0,.hide-medium{display:none}
  .col.m1{width:8.33333%}
  .col.m2.hspace{width:6.99999%}
  .col.m2{width:16.66666%}
  .col.m2.hspace{width:24.99999%}
  .col.m3{width:24.99999%}
  .col.m3.hspace{width:21.99999%}
  .col.m4{width:33.33333%}
  .col.m4.hspace{width:30.66666%}
  .col.m5{width:41.66666%}
  .col.m6{width:49.99999%}
  .col.m6.hspace{width:47.99999%}
  .col.m6{width:49.99999%}
  .col.m7{width:58.33333%}
  .col.m8{width:66.66666%}
  .col.m9{width:74.99999%}
  .col.m10{width:83.33333%}
  .col.m11{width:91.66666%}
  .col.m12{width:99.99999%}

  .col.widest{width:100%}


}
@media only screen and (min-width:993px){
  .font-size-base {font-size: 16px}

  /* style grid children - enough children */
  .grid.l1>*,.grid.l1.space>*,.grid.m2>.span,.grid.m2.space>.span{width:100%;margin-right:0;display: inline-block}
  .grid.l2>*{width:50%}
  .grid.l2.space>*{width:49%}
  .grid.l2.space>:nth-child(2n){margin-right:0}
  .grid.l3>*{width:33.3333%}
  .grid.l3.space>*{width:32%}
  .grid.l3.space>:nth-child(3n+3){margin-right:0}
  .grid.l3>.span2{width:66.6666%}
  .grid.l3.space>.span2{width:64.6666%}
  .grid.l3>.span3,.grid.l3.space>.span3{width:99.9999%}
  .grid.l4>*{width:25%}
  .grid.l4.space>*{width:23.5%}
  .grid.l4.space>:nth-child(4n+4){margin-right:0}
  .grid.l5>*{width:20%}
  .grid.l5.space>*{width:18.4%}
  .grid.l5.space>:nth-child(5n+5){margin-right:0}
  .grid.l6>*{width:16.6666%}
  .grid.l6.space>*{width:15%}
  .grid.l6.space>:nth-child(6n+6){margin-right:0}
  .grid.l7>*{width:14.2857%}
  .grid.l7.space>*{width:12.5715%}
  .grid.l7.space>:nth-child(7n+7){margin-right:0}
  .grid.l8>*{width:12.5%}
  .grid.l8.space>*{width:10.75%}
  .grid.l8.space>:nth-child(8n+8){margin-right:0}
  .grid.l9>*{width:11.1111%}
  .grid.l9.space>*{width:9.3333%}
  .grid.l9.space>:nth-child(9n+10){margin-right:0}
  .grid.l10>*{width:10%}
  .grid.l10.space>*{width:8.2%}
  .grid.l10.space>:nth-child(10n+10){margin-right:0}

  .col.l0,.hide-large{display:none}
  .col.l1{width:8.33333%}
  .col.l2{width:16.66666%}
  .col.l3{width:24.99999%}
  .col.l4{width:33.33333%}
  .col.l5{width:41.66666%}
  .col.l6{width:49.99999%}
  .col.l7{width:58.33333%}
  .col.l8{width:66.66666%}
  .col.l9{width:74.99999%}
  .col.l10{width:83.33333%}
  .col.l11{width:91.66666%}
  .col.l12{width:99.99999%}
}

.widest,.col.widest{width:100%}
.no-float,.col.no-float{float:none}
.float-right,.col.float-right{float:right}
.no-repeat,.norepeat{background-repeat: no-repeat}
.no-backcolor{background-color:inherit}
.background-cover{ background-size: cover }
.background-widest{ background-size: 100% auto }
.background-tallest{ background-size: auto 100% }
.background-largest{ background-size: 100% 100%}
.background-top { background-position: top}
.background-center { background-position: center}
.background-clear { background-color: initial }
.background-hide { background-size: 0% 0%}
.background-fade { background-color: rgba(0,0,0,0.6)};

.scroll-table { table-layout: fixed}
.scroll-table>thead,.scroll-table>tbody { float:left; width: 100%; display: block;table-layout: fixed}
.scroll-table>tbody { overflow-y: auto }
.scroll-table>thead>tr,.scroll-table>tbody>tr { width: 100%; table-layout: fixed}

